# jankokeys

./: .gitignore  CMakeLists.txt  README.md
script/: config.lua  scancodes.lua
shader/: simple.frag  simple.vert
src/: alsa_seq.c  alsa_seq.h  config.c  config.h  easing.c  easing.h  main.c  midi_common.h  midi_keyboard_janko.c  midi_keyboard_janko.h  midi_keyboard_key_color.c  midi_keyboard_key_color.h  midi_process_events.c  midi_process_events.h  piano_roll.c  piano_roll.h  sdl_clock.c  sdl_clock.h  shader.c  shader.h  texture_atlas.c  texture_atlas.h  window.c  window.h
